--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "typescript-eslint": "^8.39.1"
   },
   "dependencies": {
-    "canvas": "^3.1.2",
+    "sharp": "^0.34.3",
     "zod": "^4.0.17"
   }
 }
